[gd_scene load_steps=9 format=3 uid="uid://dbqp8dpgx7apb"]

[ext_resource type="Script" uid="uid://brx6iesd2swnw" path="res://party2/party_remake.gd" id="1_s3i6v"]
[ext_resource type="Texture2D" uid="uid://ixql1s0yevy4" path="res://assets/highlighted_tile.png" id="2_1wkuv"]
[ext_resource type="Script" uid="uid://clbcr2fpq7dty" path="res://party2/slot.gd" id="3_w1st1"]
[ext_resource type="Texture2D" uid="uid://b1p0labvagfit" path="res://assets/female_gender_icon.png" id="7_70rt6"]
[ext_resource type="PackedScene" uid="uid://dtdya0n6sybth" path="res://party2/PartyOptions.tscn" id="7_hjsu6"]
[ext_resource type="PackedScene" uid="uid://cif4teg0i3gh4" path="res://party2/PartyExpBar.tscn" id="7_w1st1"]
[ext_resource type="FontFile" uid="uid://dy160euuodr0b" path="res://assets/m5x7.ttf" id="8_70rt6"]
[ext_resource type="PackedScene" uid="uid://bfd8bt75f6tdn" path="res://party2/PartyHPBar.tscn" id="9_70rt6"]

[node name="PartyRemake" type="Node2D" node_paths=PackedStringArray("party_container")]
script = ExtResource("1_s3i6v")
party_container = NodePath("PartyContainer")
is_visible = true
process_input = true

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -14.0
offset_top = -8.0
offset_right = 669.0
offset_bottom = 386.0

[node name="Control" type="HBoxContainer" parent="."]
z_index = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 98.0
offset_top = 45.0
offset_right = 188.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Exp" type="Button" parent="Control"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("8_70rt6")
text = "exp"

[node name="Lvl" type="Button" parent="Control"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("8_70rt6")
text = "lvl"

[node name="minusHP" type="Button" parent="Control"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8_70rt6")
text = "-hp"

[node name="plusHP" type="Button" parent="Control"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8_70rt6")
text = "+hp"

[node name="PartyOptions" parent="." instance=ExtResource("7_hjsu6")]
visible = false
z_index = 1
position = Vector2(18, 193)

[node name="PartyContainer" type="Node" parent="."]

[node name="Slot1" type="Node2D" parent="." node_paths=PackedStringArray("party_hp_bar", "party_exp_bar")]
position = Vector2(160, 149)
script = ExtResource("3_w1st1")
party_hp_bar = NodePath("PartyHpBar")
party_exp_bar = NodePath("PartyExpBar")

[node name="Background" type="Sprite2D" parent="Slot1"]
texture = ExtResource("2_1wkuv")
hframes = 3

[node name="Icon" type="TextureRect" parent="Slot1"]
custom_minimum_size = Vector2(64, 64)
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -138.0
offset_top = -32.0
offset_right = -74.0
offset_bottom = 32.0
grow_vertical = 2
flip_h = true

[node name="GenderIcon" type="Sprite2D" parent="Slot1"]
position = Vector2(119, -1)
scale = Vector2(2, 2)
texture = ExtResource("7_70rt6")

[node name="PartyHpBar" parent="Slot1" instance=ExtResource("9_70rt6")]
position = Vector2(-64, 0)

[node name="PartyExpBar" parent="Slot1" instance=ExtResource("7_w1st1")]
position = Vector2(16, -14)

[node name="NameLabel" type="Label" parent="Slot1"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -24.5
offset_right = 36.0
offset_bottom = -1.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("8_70rt6")
text = "Name"
horizontal_alignment = 1

[node name="Slot2" type="Node2D" parent="." node_paths=PackedStringArray("party_hp_bar", "party_exp_bar")]
position = Vector2(480, 32)
script = ExtResource("3_w1st1")
party_hp_bar = NodePath("PartyHpBar")
party_exp_bar = NodePath("PartyExpBar")

[node name="Background" type="Sprite2D" parent="Slot2"]
texture = ExtResource("2_1wkuv")
hframes = 3

[node name="Icon" type="TextureRect" parent="Slot2"]
custom_minimum_size = Vector2(64, 64)
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -138.0
offset_top = -32.0
offset_right = -74.0
offset_bottom = 32.0
grow_vertical = 2
flip_h = true

[node name="GenderIcon" type="Sprite2D" parent="Slot2"]
position = Vector2(119, -1)
scale = Vector2(2, 2)

[node name="NameLabel" type="Label" parent="Slot2"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -24.5
offset_right = 36.0
offset_bottom = -1.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("8_70rt6")
text = "Name"
horizontal_alignment = 1

[node name="PartyHpBar" parent="Slot2" instance=ExtResource("9_70rt6")]
position = Vector2(-65, 2)

[node name="PartyExpBar" parent="Slot2" instance=ExtResource("7_w1st1")]
position = Vector2(15, -13)

[node name="Slot3" type="Node2D" parent="." node_paths=PackedStringArray("party_hp_bar", "party_exp_bar")]
position = Vector2(480, 105)
script = ExtResource("3_w1st1")
party_hp_bar = NodePath("PartyHpBar")
party_exp_bar = NodePath("PartyExpBar")

[node name="Background" type="Sprite2D" parent="Slot3"]
texture = ExtResource("2_1wkuv")
hframes = 3

[node name="Icon" type="TextureRect" parent="Slot3"]
custom_minimum_size = Vector2(64, 64)
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -138.0
offset_top = -32.0
offset_right = -74.0
offset_bottom = 32.0
grow_vertical = 2
flip_h = true

[node name="GenderIcon" type="Sprite2D" parent="Slot3"]
position = Vector2(119, -1)
scale = Vector2(2, 2)

[node name="NameLabel" type="Label" parent="Slot3"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -24.5
offset_right = 36.0
offset_bottom = -1.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("8_70rt6")
text = "Name"
horizontal_alignment = 1

[node name="PartyHpBar" parent="Slot3" instance=ExtResource("9_70rt6")]
position = Vector2(-65, 2)

[node name="PartyExpBar" parent="Slot3" instance=ExtResource("7_w1st1")]
position = Vector2(15, -13)

[node name="Slot4" type="Node2D" parent="." node_paths=PackedStringArray("party_hp_bar", "party_exp_bar")]
position = Vector2(480, 178)
script = ExtResource("3_w1st1")
party_hp_bar = NodePath("PartyHpBar")
party_exp_bar = NodePath("PartyExpBar")

[node name="Background" type="Sprite2D" parent="Slot4"]
texture = ExtResource("2_1wkuv")
hframes = 3

[node name="Icon" type="TextureRect" parent="Slot4"]
custom_minimum_size = Vector2(64, 64)
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -138.0
offset_top = -32.0
offset_right = -74.0
offset_bottom = 32.0
grow_vertical = 2
flip_h = true

[node name="GenderIcon" type="Sprite2D" parent="Slot4"]
position = Vector2(119, -1)
scale = Vector2(2, 2)

[node name="NameLabel" type="Label" parent="Slot4"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -24.5
offset_right = 36.0
offset_bottom = -1.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("8_70rt6")
text = "Name"
horizontal_alignment = 1

[node name="PartyHpBar" parent="Slot4" instance=ExtResource("9_70rt6")]
position = Vector2(-65, 2)

[node name="PartyExpBar" parent="Slot4" instance=ExtResource("7_w1st1")]
position = Vector2(15, -13)

[node name="Slot5" type="Node2D" parent="." node_paths=PackedStringArray("party_hp_bar", "party_exp_bar")]
position = Vector2(480, 252)
script = ExtResource("3_w1st1")
party_hp_bar = NodePath("PartyHpBar")
party_exp_bar = NodePath("PartyExpBar")

[node name="Background" type="Sprite2D" parent="Slot5"]
texture = ExtResource("2_1wkuv")
hframes = 3

[node name="Icon" type="TextureRect" parent="Slot5"]
custom_minimum_size = Vector2(64, 64)
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -138.0
offset_top = -32.0
offset_right = -74.0
offset_bottom = 32.0
grow_vertical = 2
flip_h = true

[node name="GenderIcon" type="Sprite2D" parent="Slot5"]
position = Vector2(119, -1)
scale = Vector2(2, 2)

[node name="NameLabel" type="Label" parent="Slot5"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -24.5
offset_right = 36.0
offset_bottom = -1.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("8_70rt6")
text = "Name"
horizontal_alignment = 1

[node name="PartyHpBar" parent="Slot5" instance=ExtResource("9_70rt6")]
position = Vector2(-65, 2)

[node name="PartyExpBar" parent="Slot5" instance=ExtResource("7_w1st1")]
position = Vector2(15, -13)

[node name="Slot6" type="Node2D" parent="." node_paths=PackedStringArray("party_hp_bar", "party_exp_bar")]
position = Vector2(480, 328)
script = ExtResource("3_w1st1")
party_hp_bar = NodePath("PartyHpBar")
party_exp_bar = NodePath("PartyExpBar")

[node name="Background" type="Sprite2D" parent="Slot6"]
texture = ExtResource("2_1wkuv")
hframes = 3

[node name="Icon" type="TextureRect" parent="Slot6"]
custom_minimum_size = Vector2(64, 64)
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -138.0
offset_top = -32.0
offset_right = -74.0
offset_bottom = 32.0
grow_vertical = 2
flip_h = true

[node name="GenderIcon" type="Sprite2D" parent="Slot6"]
position = Vector2(119, -1)
scale = Vector2(2, 2)

[node name="NameLabel" type="Label" parent="Slot6"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -24.5
offset_right = 36.0
offset_bottom = -1.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("8_70rt6")
text = "Name"
horizontal_alignment = 1

[node name="PartyHpBar" parent="Slot6" instance=ExtResource("9_70rt6")]
position = Vector2(-65, 2)

[node name="PartyExpBar" parent="Slot6" instance=ExtResource("7_w1st1")]
position = Vector2(15, -13)

[connection signal="party_options_opened" from="." to="PartyOptions" method="_party_options_opened"]
[connection signal="swap_completed" from="." to="PartyOptions" method="_on_swap_complete"]
[connection signal="switch_cancelled" from="." to="PartyOptions" method="_on_switch_cancelled"]
[connection signal="pressed" from="Control/Exp" to="." method="_on_exp_pressed"]
[connection signal="pressed" from="Control/Lvl" to="." method="_on_lvl_pressed"]
[connection signal="pressed" from="Control/minusHP" to="." method="_on_minus_hp_pressed"]
[connection signal="pressed" from="Control/plusHP" to="." method="_on_plus_hp_pressed"]
[connection signal="party_options_closed" from="PartyOptions" to="." method="_on_party_options_closed"]
[connection signal="switch_requested" from="PartyOptions" to="." method="_on_switch_requested"]
